fix: background color of html page - Set a background color to the html (when the select menu is close to the bottom a white space was visible).

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,8 @@ label {
 .address {
     margin-top: 10px;
 }
+
+/* Added CSS */
+html {
+    background-color: rgb(22 163 74);
+}
